# bgslibrary

./: .gitignore  README.md
package_bgs/LBSP/: CMakeLists.txt  bgfg_segm.cpp
